# MCP Context Exchange Example
# This pyproject.toml is provided for dependency reference
# To install, use: uv pip install --system anthropic openai google-generativeai python-dotenv aiohttp tenacity
# Or use: pip install -r requirements.txt

[project]
name = "mcp-context-exchange-example"
version = "1.0.0"
description = "MCP Context Exchange Example - Multi-model AI collaboration"
authors = [{name = "Angry Shark Studio", email = "contact@angry-shark-studio.com"}]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "anthropic>=0.18.0",
    "openai>=1.12.0", 
    "google-generativeai>=0.3.2",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "tenacity>=8.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]